Bug 344593 - kcm crashes when trying to create an account after aborting a creating
Summary: kcm crashes when trying to create an account after aborting a creating
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: accounts-kcm (other bugs)
Version First Reported In: git-latest
Platform: Gentoo Packages Linux
: NOR crash
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-02-26 13:12 UTC by kde
Modified: 2015-02-26 16:16 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description kde 2015-02-26 13:12:16 UTC
Anytime I abort an account creation and start another one, the kcm crashes. Backtrace below

Reproducible: Always

Steps to Reproduce:
1. try to create an account (tested with yahoo, but it shouldn't matter)
2. cancel creation
3. try to create an account again (tested with yahoo, but it shouldn't matter)

Actual Results:  
crash

Expected Results:  
no crash

backtrace:

Application: KDE Control Module (kcmshell5), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
81	T_PSEUDO (SYSCALL_SYMBOL, SYSCALL_NAME, SYSCALL_NARGS)
[Current thread is 1 (Thread 0x7fcf4977e7c0 (LWP 8096))]

Thread 3 (Thread 0x7fcf48aec700 (LWP 8097)):
#0  0x000000311bee1bbd in poll () at ../sysdeps/unix/syscall-template.S:81
#1  0x000000311e20a5a2 in ?? () from /usr/lib64/libxcb.so.1
#2  0x000000311e21497c in xcb_wait_for_event () from /usr/lib64/libxcb.so.1
#3  0x00007fcf49350ca9 in ?? () from /usr/lib64/qt5/plugins/platforms/libqxcb.so
#4  0x00000035b46d2b40 in ?? () from /usr/lib64/libQt5Core.so.5
#5  0x000000311c6072d4 in start_thread (arg=0x7fcf48aec700) at pthread_create.c:310
#6  0x000000311beeaaed in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 2 (Thread 0x7fcf425a7700 (LWP 328)):
#0  0x000000311bee1bbd in poll () at ../sysdeps/unix/syscall-template.S:81
#1  0x000000311da38364 in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x000000311da385a2 in g_main_loop_run () from /usr/lib64/libglib-2.0.so.0
#3  0x0000003129c5ebd6 in ?? () from /usr/lib64/libgio-2.0.so.0
#4  0x000000311dabe566 in ?? () from /usr/lib64/libglib-2.0.so.0
#5  0x000000311c6072d4 in start_thread (arg=0x7fcf425a7700) at pthread_create.c:310
#6  0x000000311beeaaed in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 1 (Thread 0x7fcf4977e7c0 (LWP 8096)):
[KCrash Handler]
#5  0x00000035b4824a41 in QCoreApplication::postEvent(QObject*, QEvent*, int) () from /usr/lib64/libQt5Core.so.5
#6  0x00007fcf40c9d88c in KAccountsUiProvider::onConnectionManagerReady (this=0xcc8bd0) at /usr/src/debug/kde-apps/ktp-accounts-kcm-9999/ktp-accounts-kcm-9999/plugins/kaccounts/kaccounts-ui-provider.cpp:162
#7  0x00007fcf40ca2fb5 in KAccountsUiProvider::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at /usr/src/debug/kde-apps/ktp-accounts-kcm-9999/ktp-accounts-kcm-9999_build/plugins/kaccounts/moc_kaccounts-ui-provider.cpp:117
#8  0x00000035b48010bd in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib64/libQt5Core.so.5
#9  0x00007fcf4065cb7c in Tp::PendingOperation::finished (this=this@entry=0x18206c0, _t1=_t1@entry=0x18206c0) at /usr/src/debug/net-libs/telepathy-qt-0.9.5/telepathy-qt-0.9.5-qt5/TelepathyQt/_gen/pending-operation.moc.hpp:161
#10 0x00007fcf4065cba2 in Tp::PendingOperation::emitFinished (this=0x18206c0) at /usr/src/debug/net-libs/telepathy-qt-0.9.5/telepathy-qt-0.9.5/TelepathyQt/pending-operation.cpp:123
#11 0x00007fcf4065d9a1 in Tp::PendingOperation::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at /usr/src/debug/net-libs/telepathy-qt-0.9.5/telepathy-qt-0.9.5-qt5/TelepathyQt/_gen/pending-operation.moc.hpp:95
#12 0x00000035b48003bf in QObject::event(QEvent*) () from /usr/lib64/libQt5Core.so.5
#13 0x00000035b696addc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#14 0x00000035b696b4e0 in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/libQt5Widgets.so.5
#15 0x00000035b4828b53 in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib64/libQt5Core.so.5
#16 0x00000035b4828d58 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /usr/lib64/libQt5Core.so.5
#17 0x00000035b4811e93 in ?? () from /usr/lib64/libQt5Core.so.5
#18 0x000000311da380ed in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#19 0x000000311da383c8 in ?? () from /usr/lib64/libglib-2.0.so.0
#20 0x000000311da3846c in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#21 0x00000035b4805f27 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#22 0x00000035b482baf2 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/libQt5Core.so.5
#23 0x00000035b6adf62f in QDialog::exec() () from /usr/lib64/libQt5Widgets.so.5
#24 0x00000035bea080cd in kdemain () from /usr/lib64/libkdeinit5_kcmshell5.so
#25 0x000000311be20050 in __libc_start_main (main=0x4007a0 <main>, argc=2, argv=0x7fff6c8c9b78, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7fff6c8c9b68) at libc-start.c:289
#26 0x00000000004007ce in _start ()
Comment 1 Martin Klapetek 2015-02-26 16:16:23 UTC
Git commit 0a2978218acc944d82620739b877ee97770979c6 by Martin Klapetek.
Committed on 26/02/2015 at 16:16.
Pushed by mklapetek into branch 'master'.

Couple fixes in the KTp create account dialog handling

M  +7    -4    plugins/kaccounts/kaccounts-ui-provider.cpp

http://commits.kde.org/telepathy-accounts-kcm/0a2978218acc944d82620739b877ee97770979c6