Couple fixes in the KTp create account dialog handling

BUG: 344593